# matchspec

./: .gitignore  Cargo.toml  README.md  build.rs  environment.yml  matchspec_in_rust.py  pyproject.toml
.github/workflows/: maturin-build.yml  rust.yml
benches/: parsing.rs  test_python.py
python/rust_matchspec/: __init__.py
recipe/: bld.bat  build.sh  meta.yaml
src/: error.rs  input_table.rs  lib.rs  matchspec.rs  package_candidate.rs  parsers.rs  python.rs
test_data/: linux_64-depends.txt
tests/: test_api.py
