[package]
name = "matchspec"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_matchspec"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7"
pyo3 = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parsing"
harness = false
