[package]
name = "matchspec"
version = "0.2.2"
edition = "2021"

[lib]
# This is the python target
name = "rust_matchspec"
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7"
pyo3 = { version = "0.18", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
version-compare = "0.1"
rayon = "1.7"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
pyo3-build-config = "0.21"

[features]
default = ["python"]
python = ["pyo3/extension-module"]

[[bench]]
name = "parsing"
harness = false
