[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14,<0.15"]

[project]
name = "rust_matchspec"
version = "0.2.1"
description = "A conda matchspec written in Rust"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["python"]
python-source = "python"

[tool.pytest.ini_options]
markers = [
	"slow: these tests take a while"
]
# Run with --benchmark-only to only do benchmarks
addopts = ["--benchmark-skip"]
