[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14,<0.15"]

[project]
name = "rust_matchspec"
version = "0.2.1"
description = "A conda matchspec written in Rust"
authors = [{ name = "Kyle Leaders" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.7"
keywords = ["conda", "matching", "conda-matchspec", "rust"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[tool.maturin]
features = ["python"]
python-source = "python"
